[css-flexbox] Clear override sizes when we're no longer a flex item

When we change to being absolutely positioned, we need to clear the override
size so as to avoid being affected by it.

R=eae@chromium.org
BUG=687747,688938,688253

Review-Url: https://codereview.chromium.org/2684463002
Cr-Commit-Position: refs/heads/master@{#448709}

Former-commit-id: 3c12965b9c068f00290a4c4ecce1cc9d404ec20a